crono_tt4/TimeTagger4_interface.h

	
	typedef struct {
		void * timetagger4;
	} timetagger4_device;
	typedef tdc4_init_parameters timetagger4_init_parameters;
	TIMETAGGER4_API int timetagger4_close(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_start_tiger(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_stop_tiger(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_start_capture(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_pause_capture(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_continue_capture(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_stop_capture(timetagger4_device *device);
	TIMETAGGER4_API int timetagger4_acknowledge(timetagger4_device *device, crono_packet *packet);
	typedef tdc4_static_info timetagger4_static_info;
	TIMETAGGER4_API int timetagger4_get_static_info(timetagger4_device *device,timetagger4_static_info* info);
	typedef tdc4_fast_info timetagger4_fast_info;
	TIMETAGGER4_API int timetagger4_get_fast_info(timetagger4_device* device, timetagger4_fast_info * info);
	typedef tdc4_param_info timetagger4_param_info;
	TIMETAGGER4_API int timetagger4_get_param_info(timetagger4_device* device, timetagger4_param_info* info);