crono_tt4/TDC4_interface.h

	
	typedef struct {
		int version;
		int card_index;
		int board_id;
		__int64 buffer_size[8];
		int buffer_type;
		__int64 buffer_address;
		int variant;
		int device_type;
		int dma_read_delay;
		int use_ext_clock;
		int rclk_sel;
	} tdc4_init_parameters;
	typedef struct {
		int size; 
		int version; 
		int board_id;
		int driver_revision;
		int firmware_revision; 
		int board_revision;
		int board_configuration;
		int subversion_revision; 
		int chip_id; 
		int board_serial;
		unsigned int flash_serial_low;	
		unsigned int flash_serial_high;	
		int flash_valid;
		char calibration_date[20];
	} tdc4_static_info;
	typedef struct {
		int size; 
		int version; 
		int tdc_rpm;
		int fpga_rpm;
		int alerts;
		int pcie_pwr_mgmt;
		int pcie_link_width; 
		int pcie_max_payload;
	} tdc4_fast_info;
	typedef struct {
		int size; 
		int version; 
		double binsize;
		int board_id;
		int channels;
		int channel_mask;
		__int64 total_buffer; 
	} tdc4_param_info;
	typedef struct {
		crono_bool_t enabled;			
		crono_bool_t rising;			
		crono_bool_t cc_enable;			
		crono_bool_t cc_same_edge;		
		crono_bool_t ths788_disable;	
		int start;
		int stop;
	} tdc4_channel;
	typedef struct {
		crono_bool_t enabled; 
		int start;
		int stop;
	} tdc4_lowres_channel;
	typedef struct {
		crono_bool_t enable; 
		crono_bool_t negate;
		crono_bool_t retrigger;
		crono_bool_t extend;				
		crono_bool_t enable_lemo_output;	
		int start;
		int stop;
		int sources;
	} tdc4_tiger_block;
	typedef struct {
		crono_bool_t falling;	
		crono_bool_t rising;	
	} tdc4_trigger;
	typedef struct {
		int size; 
		int version;
		int tdc_mode;
		crono_bool_t start_rising;
		double dc_offset[TDC4_TDC_CHANNEL_COUNT + 1];
		tdc4_trigger trigger[TDC4_TRIGGER_COUNT]; 
		tdc4_tiger_block tiger_block[TDC4_TIGER_COUNT]; 
		tdc4_channel channel[TDC4_TDC_CHANNEL_COUNT]; 
		tdc4_lowres_channel lowres_channel[TDC4_LOWRES_CHANNEL_COUNT]; 
		int auto_trigger_period;
		int auto_trigger_random_exponent;
	} tdc4_configuration;
	typedef struct {
		crono_bool_t acknowledge_last_read; 
	} tdc4_read_in ;
	typedef struct {
		crono_packet *first_packet;
		crono_packet *last_packet;
		int error_code;
		const char *error_message;
	} tdc4_read_out;