crono_tt4/crono_interface.h

	typedef struct {
		unsigned char channel;
		unsigned char card;
		unsigned char type;
		unsigned char flags;
		unsigned int length;
		__int64 timestamp;
		unsigned __int64 data[1];
	} crono_packet;