src/crono-bindgen/crono_tt4.rs

#[doc = " \\ingroup confstruct Structure xtdc4_configuration"]
#[doc = "\t\\brief\tcontains configuration information"]
#[doc = ""]
#[doc = "\tThis structure contains the configuration information. It is used in conjunction with"]
#[doc = "\t@link conffuncts xtdc4_get_default_configuration(), xtdc4_get_current_configuration()"]
#[doc = "\tand xtdc4_configure() @endlink"]
#[doc = ""]
#[doc = "\tInternally it uses the structures @link trigger xtdc4_trigger @endlink and @link tiger"]
#[doc = "\txtdc4_tiger_block @endlink"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_configuration {
    #[doc = "!< The number of bytes occupied by the structure"]
    pub size: ::std::os::raw::c_int,
    #[doc = " \\brief A version number"]
    #[doc = ""]
    #[doc = " that is increased when the definition of the structure is changed. The increment"]
    #[doc = " can be larger than one to match driver version numbers or similar. Set to 0 for"]
    #[doc = " all versions up to first release."]
    pub version: ::std::os::raw::c_int,
    #[doc = " \\brief TDC mode"]
    #[doc = ""]
    #[doc = "\tcan be @link tdcmode grouped or continous @endlink. Currently supported: grouped."]
    pub tdc_mode: ::std::os::raw::c_int,
    #[doc = " \\brief rising or falling edge trigger"]
    #[doc = ""]
    #[doc = "\twhether to sync the TDC on the rising or falling edge"]
    pub start_rising: ::std::os::raw::c_uchar,
    #[doc = " \\brief Set DAC channels for T, A - D."]
    #[doc = ""]
    #[doc = "\tdc_offset[0]     : Start"]
    #[doc = ""]
    #[doc = "\tdc_offset[1 - 4] : A - D"]
    #[doc = ""]
    #[doc = "\tSet to a value between -1.65V and +0.85V. This should be close to 50% of the height of your pulses on"]
    #[doc = "\tthe inputs. Examples for various signaling standards are defined in @link defdcoffset #defines for"]
    #[doc = "\tdc_offset @endlink. The inputs are AC coupled. This means that for pulse inputs the absolute voltage is"]
    #[doc = "\tnot important. it is rather the relative pulse amplitude that causes the input circuits to switch."]
    #[doc = "\tdc_offset for an input must be set to the relative switching voltage for the input standard in use. If"]
    #[doc = "\tthe pulses are negative, a negative switching threshold must be set and vice versa."]
    pub dc_offset: [f64; 5usize],
    #[doc = "!< Configuration of external trigger sources"]
    pub trigger: [tdc4_trigger; 16usize],
    #[doc = "!< configuration of the timing generator"]
    pub tiger_block: [tdc4_tiger_block; 5usize],
    #[doc = "!< configure polaritiy, type and threshold for the TDC channels"]
    pub channel: [tdc4_channel; 4usize],
    #[doc = "!< configure polaritiy, type and threshold for the digital channels"]
    pub lowres_channel: [tdc4_lowres_channel; 3usize],
    #[doc = " \\brief component to create a trigger either periodically or randomly."]
    #[doc = ""]
    #[doc = "  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink"]
    #[doc = "\tand N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink"]
    #[doc = "\tthat result in a distance between triggers of"]
    #[doc = ""]
    #[doc = "\t\tT = 1 + M + [1...2^N]"]
    #[doc = ""]
    #[doc = "\tclock cycles."]
    #[doc = ""]
    #[doc = "\t\t0 <= M < 2^32"]
    #[doc = ""]
    #[doc = "\t\t0 <= N < 32"]
    #[doc = ""]
    #[doc = "  there is no enable or reset as the usage of this trigger can be configured in the channels."]
    pub auto_trigger_period: ::std::os::raw::c_int,
    #[doc = " \\brief component to create a trigger either periodically or randomly."]
    #[doc = ""]
    #[doc = "  To be exact, there are two parameters M = @link auto_trigger_period auto_trigger_period @endlink"]
    #[doc = "\tand N = @link auto_trigger_random_exponent auto_trigger_random_exponent @endlink"]
    #[doc = "\tthat result in a distance between triggers of"]
    #[doc = ""]
    #[doc = "\t\tT = 1 + M + [1...2^N]"]
    #[doc = ""]
    #[doc = "\tclock cycles."]
    #[doc = ""]
    #[doc = "\t\t0 <= M < 2^32"]
    #[doc = ""]
    #[doc = "\t\t0 <= N < 32"]
    #[doc = ""]
    #[doc = "  there is no enable or reset as the usage of this trigger can be configured in the channels."]
    pub auto_trigger_random_exponent: ::std::os::raw::c_int,
}
#[doc = "\t\\ingroup readin"]
#[doc = "\t\\brief The parameters of the read commands"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_read_in {
    #[doc = "!< xtdc4_read automatically acknowledges packets from the last read"]
    pub acknowledge_last_read: ::std::os::raw::c_uchar,
}
#[doc = " \\ingroup strucreadout"]
#[doc = "\t\\brief struct for the read out of the Ndigo packets"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tdc4_read_out {
    #[doc = "\t\\brief pointer to the first packet"]
    #[doc = ""]
    #[doc = "\tthat was captured by the call of @link readout xtdc4_read @endlink"]
    pub first_packet: *mut crono_packet,
    #[doc = "\t\\brief The packet after the last one"]
    #[doc = ""]
    #[doc = "\tthis is not a valid packet"]
    pub last_packet: *mut crono_packet,
    #[doc = " \\brief error code"]
    #[doc = ""]
    #[doc = "\tThe assignments of the error codes can be found @link deferror here @endlink."]
    pub error_code: ::std::os::raw::c_int,
    #[doc = "\t\\brief error message"]
    pub error_message: *const ::std::os::raw::c_char,
}
#[doc = "\\ingroup device"]
#[doc = " \\brief struct storing properties of the device in use"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct timetagger4_device {
    #[doc = " \\brief timetagger4"]
    pub timetagger4: *mut ::std::os::raw::c_void,
}
#[doc = "\t\\ingroup initparamsstruct"]
#[doc = "\t\\brief struct for the initialization of the TimeTagger4"]
#[doc = ""]
#[doc = "\tthis structure MUST be completely INITIALIZED"]
pub type timetagger4_init_parameters = tdc4_init_parameters;
extern "C" {
    #[doc = "\t\\ingroup initfuncts"]
    #[doc = "\t\\brief finalize the driver for this device"]
    #[doc = ""]
    #[doc = "\tReturn values are listed @link defclose here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_close(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief start timing generator"]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_start_tiger(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief stop timing generator"]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_stop_tiger(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief start data acquisition"]
    #[doc = ""]
    #[doc = "\tReturn values are listed @link defstartcap here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_start_capture(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief\tpause data acquisition"]
    #[doc = ""]
    #[doc = "\tReturn values are listed @link defpausecap here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_pause_capture(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief resume data acquisition"]
    #[doc = ""]
    #[doc = "\tCall this to resume data acquisition after a call to timetagger4_pause_capture."]
    #[doc = "\tReturn values are listed @link defcontcap here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_continue_capture(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup runtime"]
    #[doc = "\t\\brief\tstop data acquisition"]
    #[doc = ""]
    #[doc = "\tReturn values are listed @link defstopcap here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    pub fn timetagger4_stop_capture(device: *mut timetagger4_device) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = "\t\\ingroup readout"]
    #[doc = "\t\\brief acknowledges the processing of the last read block"]
    #[doc = ""]
    #[doc = "\tthis is only necessary if read is not called. Return values are listed @link defack here @endlink."]
    #[doc = "\t\\param *device is type @link timetagger4_device timetagger4_device @endlink"]
    #[doc = "\t\\param *packet is type crono_packet"]
    pub fn timetagger4_acknowledge(
        device: *mut timetagger4_device,
        packet: *mut crono_packet,
    ) -> ::std::os::raw::c_int;
}
#[doc = " \\ingroup staticinfo"]
#[doc = "\t\\brief Structure contains static information"]
#[doc = ""]
#[doc = "\tThis structure contains information about the board that does not change during run time."]
#[doc = "\tIt is provided by the function @link statfuncts timetagger4_get_static_info() @endlink."]
pub type timetagger4_static_info = tdc4_static_info;
extern "C" {
    #[doc = " \\ingroup statfuncts"]
    #[doc = "\t\\brief contains static information"]
    #[doc = ""]
    #[doc = "\tGets a structure that contains information about the board that does not change during"]
    #[doc = "\trun time. Return values are listed @link defstatinfo here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *info of type timetagger4_static_info"]
    pub fn timetagger4_get_static_info(
        device: *mut timetagger4_device,
        info: *mut timetagger4_static_info,
    ) -> ::std::os::raw::c_int;
}
#[doc = " \\ingroup fastinfo"]
#[doc = "\t\\brief contains fast dynamic information"]
#[doc = ""]
#[doc = "\tThis call returns a structure that contains dynamic information that can be obtained"]
#[doc = "\twithin a few microseconds."]
pub type timetagger4_fast_info = tdc4_fast_info;
extern "C" {
    #[doc = " \\ingroup statfuncts"]
    #[doc = "\t\\brief returns fast dynamic information"]
    #[doc = ""]
    #[doc = "\tThis call gets a structure that contains dynamic information that can be obtained within a"]
    #[doc = "\tfew microseconds. Return values are listed @link deffastinfo here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *info of type timetagger4_fast_info"]
    pub fn timetagger4_get_fast_info(
        device: *mut timetagger4_device,
        info: *mut timetagger4_fast_info,
    ) -> ::std::os::raw::c_int;
}
#[doc = " \\ingroup paraminfo"]
#[doc = "\t\\brief contains configuration changes"]
#[doc = ""]
#[doc = "\tStructure filled by @link statfuncts timetagger4_get_param_info() @endlink. This structure"]
#[doc = "\tcontains information that change indirectly due to configuration changes."]
pub type timetagger4_param_info = tdc4_param_info;
extern "C" {
    #[doc = " \\ingroup statfuncts"]
    #[doc = "\t\\brief returns configuration changes"]
    #[doc = ""]
    #[doc = "\tGets a structure that contains information that changes indirectly due to configuration"]
    #[doc = "\tchanges. Return values are listed @link defparaminfo here @endlink."]
    #[doc = "\t\\param *device of type timetagger4_device"]
    #[doc = "\t\\param *info of type timetagger4_device"]
    pub fn timetagger4_get_param_info(
        device: *mut timetagger4_device,
        info: *mut timetagger4_param_info,
    ) -> ::std::os::raw::c_int;
}
